--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,6 @@
 @import 'tailwindcss';
+@import 'daisyui';
+@import 'animate.css';
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
@@ -8,4 +10,12 @@
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
+}
+@plugin "daisyui";
+
+body {
+  background: linear-gradient(to bottom, #F2FBFF, #5BD1FF);
+  min-height: 100vh;
+  margin: 0;
+   font-family: "Poppins", sans-serif;
 }
